# YAML-parse

./: CMakeLists.txt  README.md  check  memcheck  parse  test
configs/: deep.yaml  flat.yaml  mixed.yaml  test.yaml
include/: parser.h
src/: main.c  parser.c
tests/: test_parser.c
